--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/lduuv275/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774228.md#1">武汉男子推特批中共 遭判刑1年3个月</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773958.md#1">美军52架F-35战机“大象漫步” 声势浩大</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773529.md#1">【拍案惊奇】什么是左胶？ 对社会有何影响</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773877.md#1">【翻墙必看】骆惠宁见记者 腿不停颤抖</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773503.md#1">致7.5亿彩票费流失 福彩中心前高官获刑11年</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772347.md#1">一本“千古奇书” 结缘世界各族裔亿万人</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772547.md#1">中共奥威尔式维稳 学者：今年只能往下走</a><br>
-<a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772388.md#1">逃台香港抗争者：韩国瑜若当选 或被迫离开</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11773085.md#1">【揭秘】中共如何利用捷克首富打造形象</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773698.md#1">涉权钱交易及淫乱 长城资产前高管被双开</a><br>
 <a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11773607.md#1">北林大9名女学生死亡车祸案 司机被判死刑</a><br>
