--- a/gb/news392_2.md
+++ b/gb/news392_2.md
@@ -21,7 +21,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank">程晓容：党媒热捧李子柒 网红遇统战</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765223.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-936798738-150x120.jpg" align ="left"></a>一曲田园牧歌和“社会主义”、“党的领导”、“四个自信”被捆绑在了一起。显然，中共在利用李子柒的人气来推销它的洗脑宣传，也就是，搞统战。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 7:00 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank">陈思敏：危害甚于武汉肺炎不明病毒的是什么</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765346.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/554c7c19817bf7c0d7ec272bb4dcd0af-150x120.jpg" align ="left"></a>中国湖北武汉出现“不明原因肺炎”在去年12月31日经官方证实至今，时过3天病源检测迟迟未有结果出炉，却已有8人因“传谣”被快速“精准”查处。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:42 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank">【名家专栏】川普减企业税为何令左派烦恼</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11764864.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2014/08/1107020341211758-150x120.jpg" align ="left"></a>让左派沮丧的是，过去两年，海外美国企业已回流超过一万亿美元的资金，而且还将有更多海外资金回流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:41 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/5/n11769356.md#1" target="_blank">郑纯清：恶党末日临 动辄挨掌嘴</a><br></h3>恶党末日临 动辄挨掌嘴......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 4:49 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank">【名家专栏】改善地球环境 无需社会主义政策</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/3/n11765134.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/GettyImages-1178402661-webcrop-1200x720-150x120.jpg" align ="left"></a>24岁的博扬·斯莱特（Boyan Slat）是“海洋清理”（Ocean Cleanup）公司的创始人兼首席执行官，该公司利用创新技术清除全球海洋及河流中的塑料垃圾。他是在自己的18岁的“高龄”时，在祖国荷兰创立了这一倡议组织。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月03日 5:34 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768243.md#1" target="_blank">理悟：别当郎中当推手</a><br></h3>
 
 病不轻呀中共党，身患绝症入膏肓。
