--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -35,7 +35,7 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768068.md#1" target="_blank">【典故新解】食指大动：一顿鼋宴 枉送君臣性命</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/4/n11768068.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/11/getCollectionImage-2-150x120.jpg" align ="left"></a>春秋时期，郑灵公姬夷继位的第一年，楚国人进献了一只巨鼋。郑灵公很高兴，打算开鼋宴，与大臣们分享鲜美、大补的鼋肉羹。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月05日 2:14 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747583.md#1" target="_blank">唐伯虎之梦   苏东坡词文揭谜底</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/26/n11747583.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/getCollectionImage-150x120.jpg" align ="left"></a>听说过李白梦笔生花，其诗文似锦似绣。是否听说过梦墨的故事？宋朝苏东坡写过一首词，时隔四百年后，其中的一句竟成了唐伯虎的谶语。为其落幕的人生画上句点。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 5:44 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732566.md#1" target="_blank">2020金水流年对哪些人最有利？</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11732566.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2008/02/802070653561898-150x120.jpg" align ="left"></a>2020年是金水流年，且以水多为主。根据这个金水流年来判断，哪些人有利？反之，哪些是命中不喜金水的？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 4:18 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank">蒋经国一生反共信念的历程</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/1/n11760693.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/2020010021-150x120.png" align ="left"></a>蒋经国先生是中华民国第6、7任总统，也是国际知名的政治领袖。曾有民调统计，有超过半数的台湾人民认为他是最受到怀念，也是对台湾贡献最大的总统。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月04日 3:25 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/7/n11774926.md#1" target="_blank">七律：寄白居易</a><br></h3> 作诗如话多深味，愁唱醉吟悲抚桐。 杨柳千姿舞腰细，樱桃一点似唇红。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:16 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772770.md#1" target="_blank">诗歌：咏雪二首</a><br></h3> 一 玉殿琼楼下九重， 千树梨花舞寒风。 谁说严冬欠佳色， 银装素裹也怡情！......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 12:34 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/20/1/6/n11772696.md#1" target="_blank">童诗：破了一个洞</a><br></h3>啵！爸爸的外套破了一个洞
 用针缝一缝 
