--- a/gb/news2007_5.md
+++ b/gb/news2007_5.md
@@ -26,7 +26,8 @@
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank">神鸽守金库 官员杀鸽毁巢遭报应</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11731627.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/7cad2b1ea5bfc59b6837390e9c433938-150x120.jpg" align ="left"></a>鸽子有灵吗？，有一件发生在清代甘肃布政司（藩司）的事情作了实证，万物有灵不得不信。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 9:56 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank">天地清明引(145) 东流水－君臣生隙1</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11731877.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2012/07/1207040111051680-150x120.jpg" align ="left"></a>金府。楚淮阳禀报：“已按老爷吩咐，放出风去，言金府高价收购药草。但是现下大疫正盛，百姓手中但有草药，皆留置自用，无人肯售。”......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank">占星解析香港独立是反送中运动的最终结果</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/19/n11733023.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/1912111840131538-150x120.jpg" align ="left"></a>从2019年6月开始爆发的香港反送中运动是今年最大的新闻，也是空前而绝后的新闻，是世界民主和人权运动史上光辉的一页。运动至今仍在继续着，很多可歌可泣的青年人的表现和大部分港人不屈不挠、和平、理性、互助且又毫不畏惧强权的精神令人赞叹不已。香港的荣光是在提醒着全世界三十年前那场惨绝人寰的大屠杀的刽子手依然是杀人者和欺骗者.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 2:47 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank">传奇“三元宰相”——正义敢言的商辂</a><br></h3><a href="https://github.com/lduuv275/djy/blob/master/gb/9/11/19/n2727242.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2017/03/170324021553100649-150x120.jpg" align ="left"></a>商辂，字弘载，浙江淳安人，明代著名史学家、思想家，历任英宗、代宗、宪宗三朝大臣，官至吏部尚书、文渊阁大学士。他以浙江乡试第一（解元）、礼部会试第一（会元）、殿试第一（状元）“连中三元”，不仅才学出众，更以为官清廉、刚直敢言载入《明史》，在复杂动荡的时局中，他敢于为民请命，有“三元宰相”、“一代贤相”之称。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月23日 1:35 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/25/n11745238.md#1" target="_blank">五律：酒（二）</a><br></h3>此来亲道骨，何去带仙风。
+一醉云霄外，九升天地中。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 10:55 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11742891.md#1" target="_blank">唐浩：末战</a><br></h3>正邪决战末戏演   香江烽火漫连天   善扬德胜败恶堕   传奇永铭凌霄巅......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月25日 11:25 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/24/n11742996.md#1" target="_blank">台湾古典诗：山中湖映富士山</a><br></h3> 微风淡荡趁悠闲，隐约纱笼富士山； 烟水苍茫横白鹭，金波潋滟绚斑斓。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月24日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/lduuv275/djy/blob/master/gb/19/12/23/n11739882.md#1" target="_blank">唐浩：劝警</a><br></h3>毋为阶下奴
